--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.4.3",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "next": "14.1.0",
     "permissionless": "^0.0.35",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^2.7.2"
+    "viem": "^2.7.2",
+    "web3": "^4.6.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
