--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@coinbase/onchainkit": "^0.4.3",
     "@farcaster/hub-nodejs": "^0.11.7",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "ethers": "^6.11.1",
     "next": "14.1.0",
     "permissionless": "^0.0.35",
     "react": "^18",
