--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@farcaster/hub-nodejs": "^0.11.7",
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "ethers": "^6.11.1",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "ethers": "^5.7.2",
     "next": "14.1.0",
     "permissionless": "^0.0.35",
     "react": "^18",
     "react-dom": "^18",
     "viem": "^2.7.2",
-    "web3": "^4.6.0"
+    "web3": "^4.6.0",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
+    "@metamask/providers": "^16.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
