--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.4.3",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "ethers": "^6.11.1",
     "next": "14.1.0",
     "permissionless": "^0.0.35",
