--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.4.3",
+    "@farcaster/hub-nodejs": "^0.11.7",
     "ethers": "^6.11.1",
+    "mongodb": "^6.5.0",
     "next": "14.1.0",
     "permissionless": "^0.0.35",
     "react": "^18",
